* MediaHandlers can now customize the formatting of the metadata they emit
  by overriding MediaHandler::formatTag( $key, $value ).  The default for
  unknown tags is numeric formatting; non-EXIF tags which are non-numeric
  should always use this method to specify the desired formatting.
* The new 'title' type can be used to validate action API and REST API inputs.
* The new 'raw' type can be used to validate action API inputs. It bypasses
  the Unicode NFC normalization done on inputs of type 'string', so it more
  suitable when the input is binary or may contain deprecated Unicode
  sequences or characters (such as U+2001) that should be passed unmodified.
* …

=== External library changes in 1.36 ===
* …

==== New external libraries ====
* Added pear/net_url2 2.2.2.
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated composer/semver from 1.5.1 to 3.2.4.
* Updated guzzlehttp/guzzle from 6.5.4 to 7.2.0.
* Updated jquery.client from 2.0.2 to 3.0.0.
* Updated OOUI from 0.39.3 to 0.41.0.
* Updated pear/mail_mime from 1.10.8 to 1.10.9.
* Updated pear/net_smtp from 1.9.1 to 1.9.2.
* Updated pimple/pimple from 3.3.0 to 3.3.1.
* Updated wikimedia/html-formatter from 1.0.2 to 2.0.0.
* Updated wikimedia/less.php from 3.0.0 to 3.1.0.
* Updated wikimedia/object-factory from 2.1.0 to 3.0.0.
* …

===== Changed development-only external libraries =====
* Updated composer/spdx-licenses from 1.5.3 to 1.5.4.
* Updated doctrine/dbal from 2.10.2 to 3.0.0.
* Updated doctrine/sql-formatter from 1.1.0 to 1.1.1.
* Updated mediawiki/mediawiki-phan-config from 0.10.2 to 0.10.6.
* Updated monolog/monolog from 1.25.3 to 2.0.2.
* Updated nikic/php-parser from 4.4.0 to 4.10.2.
* Updated psy/psysh from 0.10.4 to 0.10.5.
* Updated seld/jsonlint from 1.7.1 to 1.8.3.
* Updated symfony/yaml from ~3.4|~4.3|~5.0.5 to ~3.4|~5.1.
* Updated wikimedia/testing-access-wrapper from 1.0.0 to 2.0.0.
* …

==== Removed external libraries ====